[gd_scene load_steps=14 format=2]

[ext_resource path="res://levels/dialog/dialog_box.gd" type="Script" id=1]
[ext_resource path="res://fonts/VT323-Regular_16.tres" type="DynamicFontData" id=2]
[ext_resource path="res://levels/level0/start_room/yoak_icon.png" type="Texture" id=3]
[ext_resource path="res://fonts/VT323-Regular_8.tres" type="DynamicFontData" id=4]
[ext_resource path="res://levels/dialog/dialog_arrow.png" type="Texture" id=5]
[ext_resource path="res://sounds/text_blip.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/button_pressed.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/components/Sounds.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
outline_color = Color( 0.447059, 0.376471, 0.309804, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.05 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 10
outline_size = 1
outline_color = Color( 0.447059, 0.376471, 0.309804, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
resource_name = "arrow"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 145, 24 ), Vector2( 147, 24 ), Vector2( 145, 24 ) ]
}

[node name="DialogBox" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
messages = [ "test1", "asdsad", "sdadasadsdas" ]

[node name="Shadow" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -30.0
margin_right = 160.0
margin_bottom = 38.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outline" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -32.0
margin_right = 158.0
margin_bottom = 36.0
color = Color( 0.47451, 0.313726, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -30.0
margin_right = 156.0
margin_bottom = 34.0
color = Color( 0.662745, 0.568627, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -30.0
margin_right = -92.0
margin_bottom = 34.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -28.0
margin_right = 153.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Greetings adventurer! You must be here to save the Princess. My name is Professor Yoak and I'll be helping you get started."
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="NameShadow" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.0
margin_top = -41.0
margin_right = -90.0
margin_bottom = -32.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameOutline" type="ColorRect" parent="."]
margin_left = -158.0
margin_top = -43.0
margin_right = -92.0
margin_bottom = -30.0
color = Color( 0.47451, 0.313726, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameBG" type="ColorRect" parent="."]
margin_left = -156.0
margin_top = -41.0
margin_right = -94.0
margin_bottom = -30.0
color = Color( 0.317647, 0.203922, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = -156.0
margin_top = -40.0
margin_right = -94.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 4 )
text = "PROFESSOR YOAK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="."]
margin_left = 146.0
margin_top = 24.0
margin_right = 162.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arrow"]
autoplay = "arrow"
anims/arrow = SubResource( 5 )

[node name="Sounds" parent="." instance=ExtResource( 8 )]

[node name="TextBlip" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -8.0

[node name="ButtonPressed" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -3.0
